syntax = "proto3";

message ConnectArgs {
}

message ConnectReply {
  bool success = 1;
}


service Connect {
  rpc IsConnect(ConnectArgs) returns (ConnectReply);
}